Added the tanvas driver to the build, as well as added us to the HID ignore IDs

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -163,3 +163,10 @@ obj-$(CONFIG_MIPI_BIF)		+= mipi_bif/
 # HTC stability files
 obj-y += htc_debug/stability/
 obj-$(CONFIG_ANDROID)		+= android/
+
+#Tanvas drivers
+ifeq ($(CONFIG_MODULES), y)
+obj-m				+= tanvas/
+else
+obj-y				+= tanvas/
+endif
